<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DASHBOARD">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:fontFamily="serif"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newbookbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:text="@string/new_booking"
        tools:text="NEW BOOKING" />

    <Button
        android:id="@+id/viewbookbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:text="@string/view_booking" />

    <Button
        android:id="@+id/feedbackbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="210dp"
        android:text="@string/feedback" />

    <Button
        android:id="@+id/canbookbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="145dp"
        android:text="@string/cancel_booking" />

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="87dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/payfarebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="204dp"
        android:text="@string/pay_fare" />

</RelativeLayout>