<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CHECKOUT">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="serif"
        android:text="@string/check_out_users"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"
        android:fontFamily="serif"
        android:text="@string/booking_id"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/bidd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView19"
        android:layout_toEndOf="@+id/textView19"
        android:ems="10"
        android:hint="@string/bid"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:fontFamily="serif"
        android:text="@string/check_out_time"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dtime"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/_00_00"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="204dp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ptime"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignParentEnd="true"
        android:text="@string/out_time" />
</RelativeLayout>