<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BOOKING">

    <EditText
        android:id="@+id/tid"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView25"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="87dp"
        android:fontFamily="serif"
        android:text="@string/tid"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        tools:text="USER ID" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:fontFamily="serif"
        android:text="@string/booking_details"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="153dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        android:fontFamily="serif"
        android:text="@string/date"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        tools:text="DATE " />

    <EditText
        android:id="@+id/tdate"
        android:layout_width="196dp"
        android:layout_height="51dp"
        android:layout_alignEnd="@+id/tid"
        android:layout_alignTop="@+id/textView8"
        android:ems="10"
        android:inputType="date"
        tools:text="@sample/tools:date/ddmmyy" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="84dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="214dp"
        android:fontFamily="serif"
        android:text="@string/time"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        tools:text="TIME" />

    <EditText
        android:id="@+id/ttime"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_toStartOf="@+id/addtime"
        android:ems="10"
        android:hint="@string/_00_00"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="214dp"
        android:fontFamily="serif"
        android:text="@string/location"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView11"
        android:layout_marginStart="142dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="151dp"
        android:fontFamily="serif"
        android:text="@string/region"
        android:textAlignment="textStart"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView12"
        android:layout_toEndOf="@+id/textView10" />

    <Button
        android:id="@+id/submbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:fontFamily="serif"
        android:text="@string/submit"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addtime"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView8"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/addtime" />

</RelativeLayout>