<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LOGIN">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/adminbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:text="@string/admin_login" />

    <Button
        android:id="@+id/userbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:text="@string/user_login" />

    <Button
        android:id="@+id/newbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userbtn"
        android:text="@string/new_user" />
</RelativeLayout>