<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CANCELBOOKING">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="serif"
        android:text="@string/cancel_booking"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/canid"
        android:fontFamily="serif"
        android:text="@string/booking_id"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/canid"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/bid"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="143dp"
        android:text="@string/submit" />

</RelativeLayout>