<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ADMINCANCEL">

    <Button
        android:id="@+id/submitt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="205dp"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/adcanedt"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView27"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/bid"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="141dp"
        android:fontFamily="serif"
        android:text="@string/booking_id"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:fontFamily="serif"
        android:text="@string/cancel_booking"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />
</RelativeLayout>