<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FARE">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:fontFamily="serif"
        android:text="@string/fare"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="153dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="149dp"
        android:text="@string/booking_id"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <EditText
        android:id="@+id/editbid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView22"
        android:layout_toEndOf="@+id/textView22"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/bid"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="144dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:fontFamily="serif"
        android:text="@string/total_fare"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        android:id="@+id/donebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="98dp"
        android:text="@string/done" />

    <Button
        android:id="@+id/farebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"
        android:text="@string/fare" />

    <TextView
        android:id="@+id/faretext"
        android:layout_width="225dp"
        android:layout_height="37dp"
        android:layout_alignTop="@+id/textView24"
        android:layout_toEndOf="@+id/textView22"
        android:fontFamily="serif"
        android:textAlignment="textStart"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>